Sutvarkyti buggai ir readme.md

--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,7 @@
         <button id="spin-button" disabled>Confirm Bet & Spin the Wheel</button>
         <div id="result"></div>
         <div id="contract-balance"></div>
+        <div id="results-container" class="results-container"></div>
 
         <script src="https://cdn.jsdelivr.net/npm/web3/dist/web3.min.js"></script>
         <script src="app.js"></script>
